# UMAS_GUI

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  execute_algorithm.py  img.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  package.xml  test_yaw.perspective  umas_settings.ini
.github/workflows/: docker-image.yml
Gamepad/: gamepad.cpp  gamepad.h
UMAS_GUI-develop/: CMakeLists.txt  img.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
UMAS_GUI-develop/communication/: pc_protocol.h  udp_protocol.h
UMAS_GUI-develop/compass/: compass.cpp  compass.h
UMAS_GUI-develop/interface/: i_basic_data.h  i_control_data.cpp  i_control_data.h  i_server_data.cpp  i_user_interface_data.cpp
UMAS_GUI-develop/map/: map.cpp  map.h  map.ui
UMAS_GUI-develop/remote_control/: joy_stick.cpp  joy_stick.h  key_board.cpp  key_board.h  remote_control.h  test.cpp
UMAS_GUI-develop/ui_utils/: dataIMU_magn.db  database.h  setup_imu.cpp  setup_imu.h  setupimu_start.h
UMAS_GUI-develop/uv/: uv_state.cpp  uv_state.h
camera_record_test/: metadata.yaml
communication/: pc_protocol.h  protocol_pult.h  udp_protocol.h
compass/: compass.cpp  compass.h  compass.ui
control/: control_service.h
docker/: Dockerfile  Dokcerfile  build_docker.sh  compile_app.sh  run_app.sh  run_docker.sh  run_image.sh
input/: gamepad_input_source.cpp  gamepad_input_source.h  i_input_source.h
interface/: i_basic_data.cpp  i_basic_data.h  i_control_data.cpp  i_control_data.h  i_server_data.cpp  i_server_data.h  i_user_interface_data.cpp  i_user_interface_data.h  python_interface.cpp  python_interface.h
map/: map.cpp  map.h  map.html  map.qml  map.ui  map_widget.cpp  map_widget.h  map_widget.ui
mods/: mode_automatic.cpp  mode_automatic.h  mode_automatic.ui
remote_control/: gamepad.h  joy_stick.cpp  joy_stick.h  key_board.cpp  key_board.h  remote_control.cpp  remote_control.h
ros2_bridge/: ros2_bridge.cpp  ros2_bridge.h
rosbag2_2025_12_07-17_52_25/: metadata.yaml  rosbag2_2025_12_07-17_52_25_0.db3
tabs/: check_imu.cpp  check_imu.h  check_imu.ui  check_msg.cpp  check_msg.h  check_msg.ui  power_system.cpp  power_system.h  power_system.ui
transformation/: transformation.cpp  transformation.h
ui_utils/: dataIMU_magn  dataIMU_magn.db  database.cpp  database.h  list_uwb.db  setup_imu.h  setup_imu.ui  setupimu_check.cpp  setupimu_check.h  setupimu_check.ui  setupimu_start.cpp  setupimu_start.h  setupimu_start.ui
uv/: uv_state.cpp  uv_state.h
video/: video_player_widget.cpp  video_player_widget.h
videowidget/: mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled.pro  videowidget.cpp  videowidget.h  videowidget.ui
